[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Level.gd" type="Script" id=1]

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 463.0
margin_top = 245.0
margin_right = 560.0
margin_bottom = 355.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 14.0
text = "Level Selection"

[node name="Easy" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 38.0
text = "Easy"

[node name="Medium" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 97.0
margin_bottom = 62.0
text = "Medium"

[node name="Hard" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 97.0
margin_bottom = 86.0
text = "Hard"

[node name="Custom" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 97.0
margin_bottom = 110.0
text = "Custom"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Custom" to="." method="_on_Custom_pressed"]
